# aiopikvm

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: atx.md  error-handling.md  gpio.md  hid.md  msd.md  prometheus.md  redfish.md  streamer.md  switch.md  system.md  websocket.md
docs/reference/: client.md  exceptions.md  models.md  ws.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/atx/: index.html
guide/error-handling/: index.html
guide/gpio/: index.html
guide/hid/: index.html
guide/msd/: index.html
guide/prometheus/: index.html
guide/redfish/: index.html
guide/streamer/: index.html
guide/switch/: index.html
guide/system/: index.html
guide/websocket/: index.html
reference/client/: index.html
reference/exceptions/: index.html
reference/models/: index.html
reference/ws/: index.html
search/: search_index.json
src/aiopikvm/: __init__.py  _client.py  (+4 more)
tests/: conftest.py  test_atx.py  test_auth.py  test_client.py  test_errors.py  test_gpio.py  test_hid.py  test_msd.py  test_prometheus.py  test_redfish.py  test_streamer.py  test_switch.py  test_system.py  test_ws.py
(+42 files in other folders)
