[project]
name = "aiopikvm"
version = "0.1.0"
description = "Async Python client for PiKVM API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "kudato" }]
keywords = ["pikvm", "kvm", "async", "api", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.10",
    "websockets>=15.0",
]

[project.urls]
Homepage = "https://github.com/kudato/aiopikvm"
Repository = "https://github.com/kudato/aiopikvm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aiopikvm"]

[dependency-groups]
dev = [
    "mypy>=1.15",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "respx>=0.22",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
